fixed footer spacing issues

--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,27 +1,32 @@
 footer {
   background-color: rgb(235, 235, 236);
   color: #111111;
-  padding: 20px 30px;
+  padding: 30px;
+}
+
+footer .footer-flex {
+  margin-bottom: 30px;
 }
 
 footer .logo {
   font-family: 'Corinthia';
   font-size: 48px;
-  color: var(--milk);
+  color: var(--coffee);
   font-weight: 700;
-}
-
-footer .brand {
   margin-bottom: 15px;
 }
 
 footer .address,
-.phone,
-.email {
+footer .phone,
+footer .email {
   display: flex;
   align-items: center;
   color: var(--coffee);
-  margin-bottom: 10px;
+}
+
+footer .address,
+footer .phone {
+  margin-bottom: 15px;
 }
 
 footer .address p,
@@ -31,16 +36,25 @@ footer .address p,
 }
 
 footer .footer-menu {
-  margin: 15px 0;
+  margin: 30px 0;
 }
 
 footer .footer-menu ul {
   list-style: none;
+  font-size: 18px;
+}
+
+footer .footer-menu ul li:not(:last-of-type) {
+  margin-bottom: 15px;
+}
+
+footer .socials {
+  margin-bottom: 30px;
 }
 
 footer .socials p {
   font-size: 18px;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
   color: var(--milk);
 }
 
@@ -57,14 +71,14 @@ footer .socials ul li {
 
 footer .copy {
   text-align: center;
-  margin-top: 15px;
+  margin-top: 30px;
   color: var(--milk);
   font-weight: 600;
 }
 
 footer .dev-credit {
   color: var(--coffee);
-  margin-top: 10px;
+  margin-top: 15px;
   font-style: italic;
   font-family: 'Playfair Display';
 }
@@ -86,5 +100,9 @@ footer .dev-credit a {
 
   footer .footer-menu {
     margin: unset;
+  }
+
+  footer .socials {
+    margin-bottom: unset;
   }
 }
